@@ -1,3 +1,9 @@
+2015-04-09  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* elfxx-target.h (TARGET_BIG_SYM): Add BFD_COMPRESS_GABI to
+	object_flags.
+	(TARGET_LITTLE_SYM): Likewise.
+
 2015-04-09  Max Filippov  <jcmvbkbc@gmail.com>
 
 	* elf32-xtensa.c (splay-tree.h): include header.
